--- a/src/css/style.css
+++ b/src/css/style.css
@@ -17,62 +17,32 @@
   height: 100vh;
 }
 
-.content-menu {
+nav.nav-wrapper {
   display: flex;
-  max-width: 1400px;
   justify-content: space-between;
-  align-items: center;
-  padding: 25px 0;
-  /* 25px para cima e para baixo e 0 para a esquerda e para a direita */
   margin: 0 auto;
+  background: none;
+  padding: 10px;
 }
 
-.content-1-banner {
-  width: 20%;
-  display: flex;
-  align-items: center;
-  justify-content: start;
-}
-
-.content-2-banner {
-  width: 60%;
-}
-
-a {
-  text-decoration: none;
-  color: white;
+nav.nav-wrapper a {
   font-size: 16px;
-  font-weight: 500;
-  letter-spacing: 0px;
   font-family: Roboto Mono;
   padding: 0 20px;
 }
 
-ul {
-  list-style: none;
-  /*retirar os pontos da lista*/
-}
-
-.content-2-banner .navegacao .menu {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.content-3-banner {
-  width: 20%;
-  display: flex;
-  align-items: center;
-  justify-content: end;
-}
-
-.content-3-banner button {
-  padding: 15px 36px;
-  color: #fff;
-  background-color: #272327;
-  font-family: Anton;
-  font-size: 20px;
-  border: none;
+.z-depth-1,
+nav,
+.card-panel,
+.card,
+.toast,
+.btn,
+.btn-large,
+.btn-floating,
+.dropdown-content,
+.collapsible,
+.side-nav {
+  box-shadow: none;
 }
 
 /*TITULO BANNER*/
@@ -80,7 +50,7 @@ ul {
 .content-banner {
   max-width: 1080px;
   margin: 0 auto;
-  padding: 120px 0 0 0;
+  padding: 100px 0 20px 0;
 }
 
 .content-banner-titulo {
@@ -105,6 +75,19 @@ ul {
   padding: 30px 0;
 }
 
+.button-menu {
+  font-family: Anton;
+  font-size: 20px;
+  line-height: 20px;
+  font-weight: 400;
+  letter-spacing: 0px;
+  padding: 15px 36px 15px 36px;
+  border-width: 0px;
+  border-radius: 2px;
+  background-color: #272327;
+  color: #fff;
+}
+
 .content-banner-titulo button {
   padding: 10px 15px;
   color: #fff;
@@ -126,13 +109,29 @@ ul {
 /*DEPOIMENTOS BANNER*/
 
 /*RESPONSIVE MOBILE*/
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
+
+  nav i,
+  nav [class^="mdi-"],
+  nav [class*="mdi-"],
+  nav i.material-icons {
+    color: #ff6326;
+    font-size: 30px;
+  }
+
+  nav.nav-wrapper a {
+    padding: 0;
+  }
 
   .content-3-banner button {
     display: none;
   }
 
-  .content-banner-titulo p {
+  .content-banner {
+    padding: 20px 0;
+  }
+
+  .btn-menu {
     display: none;
   }
 
@@ -150,11 +149,16 @@ ul {
     background-size: cover;
   }
 
+  .content-banner-titulo {
+    text-align: center;
+  }
+
   .content-banner-titulo h2 {
-    font-size: 27px;
+    font-size: 50px;
     font-weight: 400;
     letter-spacing: 0px;
     color: rgb(255, 255, 255);
+    text-align: center;
   }
 
   .content-banner-titulo button {
@@ -167,12 +171,7 @@ ul {
     border: none;
   }
 
-  .content-banner {
-    padding: 40px 20px;
-  }
-
 }
-
 /*HEADER E BANNER*/
 
 /*TRILHA SECTION-1*/
@@ -202,6 +201,7 @@ ul {
   align-items: center;
   padding: 40px 0;
 }
+
 .section-1 p {
   color: #f7f7f7;
   font-family: Roboto;
@@ -239,7 +239,7 @@ ul {
   letter-spacing: 0px;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .section-1 {
     padding: 40px 20px;
   }
@@ -250,7 +250,7 @@ ul {
   }
 
   .section-1-descrição {
-    font-size: 13px;
+    font-size: 18px;
     letter-spacing: 0px;
   }
 }
@@ -260,7 +260,6 @@ ul {
 
 .section-2 {
   display: flex;
-  flex-flow: row wrap;
   height: 650px;
 }
 
@@ -306,7 +305,7 @@ ul {
   height: 100%;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .section-2 {
     display: flex;
     flex-direction: column;
@@ -319,7 +318,6 @@ ul {
 
   .content-1-section-2 {
     width: 100%;
-    padding: 40px 20px;
   }
 
   .content-2-section-2 {
@@ -384,7 +382,7 @@ ul {
   height: 100%;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .section-3 {
     display: flex;
     flex-direction: column;
@@ -466,7 +464,7 @@ ul {
   height: 100%;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .section-4 {
     display: flex;
     flex-direction: column;
@@ -547,7 +545,7 @@ ul {
   height: 100%;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .section-5 {
     display: flex;
     flex-direction: column;
@@ -635,7 +633,7 @@ ul {
   height: 100%;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
 
   .container-section-6 {
     display: flex;
@@ -645,7 +643,7 @@ ul {
     margin-right: 0;
   }
 
-  .content-1-section-6{
+  .content-1-section-6 {
     width: 100%;
   }
 
@@ -653,7 +651,7 @@ ul {
     display: none;
   }
 
-  .section-6{
+  .section-6 {
     width: 100%;
     padding: 40px 20px;
     margin: 0;
@@ -734,7 +732,7 @@ hr {
   border: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
   .section-7 {
     width: 100%;
     padding: 40px 20px;
@@ -869,7 +867,7 @@ hr {
   border: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
 
   .content-section-8 {
     display: flex;
@@ -1097,7 +1095,7 @@ input:focus {
   text-decoration: none;
 }
 
-@media screen and (max-width: 480px) {
+@media screen and (max-width: 768px) {
 
   .section-9 {
     padding: 40px 0;
@@ -1133,14 +1131,14 @@ input:focus {
   }
 
   .content-form {
-    padding: 20px 0;
+    padding: 20px 2px;
     width: 300px;
     margin-left: auto;
     margin-right: auto;
   }
 
   .section-formulario {
-    padding: 5px;
+    padding: 0;
   }
 
   .text-description {
@@ -1156,8 +1154,13 @@ input:focus {
 
   .footer .copyright a {
     font-size: 14px;
-    padding:  0 2px;
+    padding: 0 2px;
   }
+
+  .formulario input {
+    padding: 0;
+  }
+  
 
 }
 
