--- a/src/css/style.css
+++ b/src/css/style.css
@@ -113,7 +113,7 @@ nav,
 /*DEPOIMENTOS BANNER*/
 
 /*RESPONSIVE MOBILE*/
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 991px) {
 
   nav i,
   nav [class^="mdi-"],
@@ -177,7 +177,7 @@ nav,
 
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1023px){
 
   nav i,
   nav [class^="mdi-"],
@@ -208,6 +208,11 @@ nav,
   .content-banner {
     padding: 100px 20px;
   }
+
+}
+
+@media screen and (min-width: 1024px) {
+
 
 }
 
@@ -278,7 +283,7 @@ nav,
   letter-spacing: 0px;
 }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 991px) {
   .section-1 {
     padding: 40px 20px;
   }
@@ -294,7 +299,7 @@ nav,
   }
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1023px){
   .section-1 p {
     font-size: 16px;
   }
@@ -358,7 +363,7 @@ nav,
   height: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 991px) {
   .section-2 {
     display: flex;
     flex-direction: column;
@@ -383,7 +388,7 @@ nav,
   }
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1023px){
   .section-2 {
     height: 400px;
   }
@@ -453,7 +458,7 @@ nav,
   height: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 991px) {
   .section-3 {
     display: flex;
     flex-direction: column;
@@ -483,7 +488,7 @@ nav,
   }
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1023px){
   .section-3 {
     height: 400px;
   }
@@ -553,7 +558,7 @@ nav,
   height: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 991px) {
   .section-4 {
     display: flex;
     flex-direction: column;
@@ -583,7 +588,7 @@ nav,
   }
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1023px){
   .section-4 {
     height: 400px;
   }
@@ -652,7 +657,7 @@ nav,
   height: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 991px) {
   .section-5 {
     display: flex;
     flex-direction: column;
@@ -682,7 +687,7 @@ nav,
   }
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1023px){
   .section-5 {
     height: 400px;
   }
@@ -758,7 +763,7 @@ nav,
   height: 100%;
 }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 991px) {
 
   .container-section-6 {
     display: flex;
@@ -788,7 +793,7 @@ nav,
   }
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1023px){
 
   .section-6 {
     width: 100%;
@@ -876,7 +881,7 @@ hr {
   border: none;
 }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 991px) {
   .section-7 {
     width: 100%;
     padding: 40px 20px;
@@ -920,7 +925,7 @@ hr {
   }
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1023px){
   .section-7 {
     width: 100%;
     padding: 50px 20px;
@@ -1027,7 +1032,7 @@ hr {
   border: none;
 }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 991px) {
 
   .content-section-8 {
     display: flex;
@@ -1089,7 +1094,7 @@ hr {
 
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1023px){
 
   .content-section-8 {
     width: 100%;
@@ -1235,7 +1240,7 @@ input:focus {
   text-decoration: none;
 }
 
-@media screen and (max-width: 768px) {
+@media (min-width: 320px) and (max-width: 991px) {
 
   .section-9 {
     padding: 40px 0;
@@ -1302,7 +1307,7 @@ input:focus {
   }
 }
 
-@media screen and (min-width: 992px) {
+@media (min-width: 992px) and (max-width: 1023px){
 
   .content-section-9 {
     width: 100%;
